Version 2.7.13dev:

* Fixed middle mouse button ungrabbing with more than 1 keyboard joystick.
* Remove greek translations due to missing bitmap font characters.
* Imported updated translations from crowdin.com.

Version 2.7.12dev:

* Support additional/custom keybard-emulated joysticks, built-in configs
  for X-Arcade controllers.
* Enabled ECS Agnus for *all* A500 models by mistake (2.7.10dev).

Version 2.7.10dev:

* Choosing an accelerator now auto-selects a suitable CPU.
* Added new option: network_card.
* Added new option: freezer_cartridge.
* Automatically set chipset to ECS Agnus if A500 and chip RAM >= 1MB.
* A4000 model defaults to 680EC30 now, not 68030.
* Fixed on-screen warning when using hardware dongle.
* You can now more easily override keybindings in keyboard.conf.
* New option cdrom_drive_0_delay (boolean) - delayed insert for CD32.
* Enable the CD-ROM drive if there are CD images in the CD swap list.
* Load floppy drive sounds from fs-uae.dat (fixes missing drive sounds).
* Also look for named shaders in FS-UAE/Data/Shaders.
* Map Mod+cursors to Amiga cursor keys (useful with joystick emulation).

Version 2.7.9dev:

* Plugin layout changed - new plugins must be downloaded.
* Detect screen refresh rate for correct display with multiple displays.
* Simplified video_sync option (is a boolean now).
* Low latency vsync is enabled by default.

Version 2.7.8dev:

* Disable use of fullscreen spaces on OS X by default. Use
  SDL_VIDEO_MAC_FULLSCREEN_SPACES = 1 (advanced settings or environment) if
  you want to re-enable it.
* Fixed a crash when using (experimental and) unsupported re-recording.

Version 2.7.7dev:

* Compile with hardening disabled for Fedora 23+.
* Automatically scan $BASE/AmigaForever/Amiga Files/Shared/rom for Kickstarts.

Version 2.7.6dev:

* Fix AGA flickering bug introduced in 2.5.40dev.
* Do not use R12 register in x86-64 JIT due to addressing issue.
* Lowered default floppy drive sound volume.