@@ -1,0 +1,7 @@
+Summary: Expect Specific FS-UAE Version
+Default:
+Example: 2.7.12dev
+
+Warn if the FS-UAE version does not equal the value of this option. Used
+by FS-UAE Launcher to verify that there is not an older FS-UAE version in
+use by accident.
