@@ -1112,6 +1112,13 @@ int main(int argc, char *argv[])
         fs_emu_warning(_("No configuration file was found"));
     }
 
+    const char *expect_version = fs_config_get_const_string(
+                OPTION_EXPECT_VERSION);
+    if (expect_version && strcmp(expect_version, PACKAGE_VERSION) != 0) {
+        fs_emu_warning(_("Expected FS-UAE version %s, got %s"),
+                       expect_version, PACKAGE_VERSION);
+    }
+
     fs_log("\n");
     fs_log(LOG_LINE);
     fs_log("fs-uae init\n");
