@@ -1,5 +1,6 @@
 Version 2.7.13dev:
 
+* New option expect_version (used by Fs-UAE Launcher).
 * Fixed middle mouse button ungrabbing with more than 1 keyboard joystick.
 * Remove greek translations due to missing bitmap font characters.
 * Imported updated translations from crowdin.com.
